--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,17 +1,22 @@
 /** @format */
 
 body {
-	font-family: Roboto, sans-serif;
-	font-size: 14px;
-	letter-spacing: 0.03em;
-	color: var(--second-title-color);
-	background-color: var(--first-body-background-color);
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  color: var(--second-title-color);
+  background-color: var(--first-body-background-color);
 }
 
 .list {
-	list-style: none;
+  list-style: none;
 }
 
 .link {
-	text-decoration: none;
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  height: auto;
 }
