--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -7,15 +7,37 @@
   letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
+.clients__list {
+  // display: flex;
+  // justify-content: center;
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+}
 
 .clients__item {
-  width: 170px;
+  margin-bottom: 30px;
+  width: 100%;
   height: 92px;
+  @media screen and (min-width: 480px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 6 - 30px);
+  }
 }
 
-.clients__item + .clients__item {
-  margin-left: 30px;
-}
+// .clients__item + .clients__item {
+//   margin-left: 30px;
+// }
 
 .clients__link {
   width: 100%;
@@ -36,11 +58,6 @@
     border: 1px solid var(--accent-color);
     box-sizing: border-box;
   }
-}
-
-.clients__list {
-  display: flex;
-  justify-content: center;
 }
 
 .clients__icon {
