--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,11 +1,16 @@
 /** @format */
 
 .features__title {
-  font-weight: 700;
+  font-weight: 700px;
   line-height: 1.14;
+  // width: 100%;
+  // height: 100%;
   text-transform: uppercase;
   padding-bottom: 10px;
-
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    text-align: left;
+  }
   color: var(--second-title-color);
 }
 
@@ -16,23 +21,35 @@
 }
 
 .features__list {
-  justify-content: space-between;
-  display: flex;
+  margin-bottom: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
 
 .features__item {
-  width: calc(25% - 22.5px);
+  // width: calc(25% - 22.5px);
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+  }
+  // margin-left: 15px;
 }
 
 .features__icon {
   border-radius: 4px;
   border: none;
+  margin: 25px 0px;
 }
 
 .features__div {
   background: var(--third-body-background-color);
-  width: 270px;
-  height: 120px;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
