--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -6,7 +6,7 @@
   line-height: 1.16;
   text-align: center;
 
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 
   color: var(--second-title-color);
 }
@@ -30,16 +30,28 @@
 }
 
 .team__list {
-  display: flex;
-  justify-content: space-between;
+  margin-bottom: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
 
 .team__item {
   text-align: center;
+  margin-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--first-body-background-color);
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+  }
 }
 
 .team__container-text {
