--- a/sass/layout/_address.scss
+++ b/sass/layout/_address.scss
@@ -31,10 +31,15 @@
   color: var(--second-text-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  text-align: center;
 
   &:hover,
   &:focus {
     color: var(--first-title-color);
+  }
+
+  @media screen and(min-width: 1200px) {
+    text-align: left;
   }
 }
 
@@ -49,13 +54,29 @@
   &:first-child {
     margin-top: 20px;
   }
+  text-align: center;
+
+  @media screen and(min-width: 768px) {
+  }
+  @media screen and(min-width: 1200px) {
+    text-align: left;
+  }
 }
 
 .footer__container {
-  display: grid;
-  grid-template-columns: max-content max-content max-content;
-  gap: 70px;
-  align-items: baseline;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  @media screen and(min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+  @media screen and(min-width: 1200px) {
+    display: grid;
+    grid-template-columns: max-content max-content max-content;
+    gap: 70px;
+    align-items: baseline;
+  }
 }
 
 .footer__join-us {
@@ -63,8 +84,21 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
+  margin-top: 60px;
 
   color: var(--first-body-background-color);
+
+  @media screen and(min-width: 768px) {
+    margin-top: 0px;
+    margin-left: 140px;
+  }
+
+  @media screen and(min-width: 1200px) {
+    text-align: left;
+    margin-left: 0px;
+    margin-top: 0px;
+  }
 }
 
 .footer__social-item {
@@ -99,6 +133,13 @@
   display: flex;
   justify-content: center;
   margin-top: 20px;
+
+  @media screen and(min-width: 768px) {
+    margin-left: 165px;
+  }
+  @media screen and(min-width: 1200px) {
+    margin-left: 0px;
+  }
 }
 
 .footer__social-icon {
@@ -111,17 +152,34 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--first-btn-color);
+  text-align: center;
+  margin-top: 20px;
+  @media screen and (min-width: 768px) {
+    margin-top: 60px;
+  }
+  @media screen and(min-width: 1200px) {
+    text-align: left;
+  }
 }
 
 .online-form {
-  display: flex;
-  margin-top: 20px;
-  justify-content: space-between;
+  display: block;
+
+  justify-content: center;
+  @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-between;
+  }
 }
 
 .online-form__mail {
-  width: 358px;
+  width: 450px;
   height: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -134,6 +192,15 @@
   &:hover,
   &:focus {
     border: 1px solid var(--accent-color);
+  }
+
+  @media screen and(min-width: 768px) {
+  }
+
+  @media screen and(min-width: 1200px) {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    width: 358px;
   }
 }
 
@@ -150,6 +217,7 @@ input[type="email"]::placeholder {
   width: 200px;
   height: 50px;
   font-size: 16px;
+  margin-left: 125px;
   line-height: 1.87;
   display: flex;
   justify-content: center;
@@ -167,6 +235,12 @@ input[type="email"]::placeholder {
   &:focus,
   &:hover {
     background-color: var(--background-btn-color);
+  }
+  @media screen and(min-width: 768px) {
+  }
+
+  @media screen and(min-width: 1200px) {
+    margin-left: 0px;
   }
 }
 
