--- a/sass/layout/_main-hero.scss
+++ b/sass/layout/_main-hero.scss
@@ -7,6 +7,8 @@
   display: flex;
   align-items: center;
   text-align: center;
+  margin-left: 100px;
+  margin-right: 100px;
   letter-spacing: 0.06em;
   background-color: var(--accent-color);
   border: none;
@@ -14,9 +16,6 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   padding: 0px 32px;
   transition: 0.15s all ease-in-out;
-
-  margin-left: 485px;
-  margin-top: 30px;
 
   color: var(--first-btn-color);
   transition-duration: 250ms;
@@ -26,25 +25,44 @@
   &:focus {
     background-color: var(--background-btn-color);
   }
+
+  @media screen and (min-width: 768px) {
+    margin-left: 230px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 485px;
+  }
 }
 
 .main__solution {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.61;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-
-  margin-left: 237px;
-  margin-right: 237px;
-
+  padding-bottom: 30px;
   color: var(--first-title-color);
+  @media screen and (min-width: 768px) {
+    margin-left: 150px;
+    margin-right: 150px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+    margin-left: 237px;
+    margin-right: 237px;
+  }
 }
 
 .main__position {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .main__bg {
@@ -52,11 +70,55 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/bg-index.jpg);
+    url(../images/hero/bg-index-mob-1x.jpg);
   flex-grow: 1;
+  background-size: 480px 400px;
   background-repeat: no-repeat;
   background-position: center;
-  max-width: 1600px;
-  max-height: 100%;
+
   margin: auto;
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero/bg-index-mob-2x.jpg);
+  }
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero/bg-index-tab-1x.jpg);
+    background-size: 768px 400px;
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero/bg-index-tab-2x.jpg);
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero/bg-index-pc-1x.jpg);
+    background-size: 1600px 600px;
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero/bg-index-pc-2x.jpg);
+    }
+  }
 }
