--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -26,6 +26,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
 
 .information__item {
@@ -44,6 +49,14 @@
 
   &:hover .information__item__toptext-description {
     transform: translateY(0);
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
   }
 }
 
@@ -102,6 +115,13 @@
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
+  flex-basis: calc(100% / 2 - 30px);
+
+  @media screen and (max-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
 
 .portfolio__item {
@@ -110,5 +130,9 @@
 
   &:not(last-child) {
     margin-right: 8px;
+  }
+
+  @media screen and (max-width: 768px) {
+    flex-basis: calc(100% / 3 - 8px);
   }
 }
